--- a/style.css
+++ b/style.css
@@ -759,10 +759,10 @@ padding: 10px 10px;
   background-size: cover;
 }
 #AvisimageOIP1{
-    background-image: url("OIP-1.webp");
+    background-image: url("OIP.webp");
 }
 #AvisimageOIP{
-    background-image: url("OIP.webp");
+    background-image: url("OIP-1.webp");
 }
 .nommetier{
   width: 80%;
@@ -1487,7 +1487,9 @@ form {
 }
 
 }
-
+.imagenom {
+    gap: 10px;
+}
 /*1680*/
 
 @media (min-width: 1680px){
